tests/NormalTests/paczka1/fuzzy1/49690635.err
Error in line 3: vJ7Ek0M A761 35,3
Error in line 4: t0E S163 49,9
Error in line 5: vJ7Ek0M A263 25,4
Error in line 7: t0E A181 8,0
Error in line 9: t0E A263 88,3
Error in line 21: t0E A263 37,6
Error in line 28: t0E S163 6,9
Error in line 35: yYUuh S163 93,7
